fix(#7689): let CREATE TIMESERIES TYPE say the whole type, so a remote create is one statement (#7721)